waybar: color & alignment fixes

--- a/home-manager/dotfiles/.config/waybar/style.css
+++ b/home-manager/dotfiles/.config/waybar/style.css
@@ -1,6 +1,9 @@
 .modules-right > * {
   border: 2px solid #595959;
+  border-bottom: none;
   border-radius: 5px;
+  border-bottom-left-radius: 0;
+  border-bottom-right-radius: 0;
 }
 * {
     /* `otf-font-awesome` is required to be installed for icons */
@@ -10,8 +13,8 @@
 
 window#waybar {
     /*background-color: rgba(43, 48, 59, 0.5); */
-    background-color: rgba(0,0,0,0);
-    border-bottom: 3px solid rgba(100, 114, 125, 0.5);
+    background-color: rgba(0,0,0,1);
+     border-bottom: 2px solid rgba(89, 89, 89, 0.5);
     color: #ffffff;
     transition-property: background-color;
     transition-duration: .5s;
@@ -115,15 +118,22 @@ button:hover {
 #clock {
     font-size:11pt;
     padding: 2px 10px 0px;
+    background-color: rgba(40, 40, 40, 1);
+    border-radius: 6px;
+    border-bottom-left-radius: 0px;
+    border-bottom-right-radius: 0px;
 }
 
 #battery {
     background-color: rgba(43, 48, 59, 0.5);
     color: #ffffff;
+    /*alignment messed up without this padding*/
+    padding: 0px 12px 0px 12px;
 }
 
 #battery.charging, #battery.plugged {
     color: #ffffff;
+    border-radius: 6px;
     background-color: #26A65B;
 }
 
@@ -136,6 +146,7 @@ button:hover {
 
 #battery.critical:not(.charging) {
     background-color: #f53c3c;
+    border-radius: 6px;
     color: #ffffff;
     animation-name: blink;
     animation-duration: 0.5s;
@@ -149,7 +160,8 @@ label:focus {
 }
 
 #backlight {
-    background-color: rgba(43, 48, 59, 0.5);;
+    background-color: rgba(43, 48, 59, 0.5);
+    min-width: 3.2em;
 }
 
 #network {
@@ -171,8 +183,10 @@ label:focus {
 }
 
 #wireplumber {
-    background-color: #fff0f5;
-    color: #000000;
+    /*background-color: #fff0f5; */
+    background-color: rgba(43, 48, 59, 0.5);
+    color: #ffffff;
+    min-width: 3.2em;
 }
 
 #wireplumber.muted {
@@ -216,6 +230,9 @@ label:focus {
 
 #idle_inhibitor {
     background-color: rgba(43, 48, 59, 0.5);
+    /*Center the icon correctly*/
+    padding: 0px 10px 0px 12px;
+    margin-bottom: -2px;
 }
 
 #idle_inhibitor.activated {
@@ -223,6 +240,8 @@ label:focus {
     color: #2d3436;
     border: 2px solid grey;
     border-radius: 5px;
+    border-bottom-left-radius: unset;
+    border-bottom-right-radius: unset;
 }
 
 #mpd {
